--- a/functions/package.json
+++ b/functions/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "express": "^4.17.3",
     "firebase-admin": "^10.0.2",
-    "firebase-functions": "^3.18.0"
+    "firebase-functions": "^3.18.0",
+    "nodemailer": "^6.7.2"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.2.0"
